--- a/public/dolar-sube-presiona-economias-emergentes.html
+++ b/public/dolar-sube-presiona-economias-emergentes.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="article.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+    <!-- Google tag (gtag.js) -->n    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FNCYG6XM1"></script>n    <script>n      window.dataLayer = window.dataLayer || [];n      function gtag(){dataLayer.push(arguments);}n      gtag('js', new Date());nn      gtag('config', 'G-3FNCYG6XM1');n    </script>n
 </head>
 
 <body>
