--- a/public/fondos-indexados-guia.html
+++ b/public/fondos-indexados-guia.html
@@ -12,6 +12,16 @@
     <link rel="stylesheet" href="article.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="adsense.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FNCYG6XM1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-3FNCYG6XM1');
+    </script>
 </head>
 
 <body>
