--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,16 @@
     <link rel="apple-touch-icon" sizes="192x192" href="favicon-192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="favicon-512.png">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FNCYG6XM1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-3FNCYG6XM1');
+    </script>
+
     <!-- SEO -->
     <meta name="description"
         content="Noticias, análisis y artículos de finanzas, economía, inversiones y mercados. Información clara para ayudarte a tomar mejores decisiones financieras.">
