--- a/public/todos-los-articulos.html
+++ b/public/todos-los-articulos.html
@@ -39,6 +39,7 @@
             padding: 0 20px;
         }
     </style>
+    <!-- Google tag (gtag.js) -->n    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FNCYG6XM1"></script>n    <script>n      window.dataLayer = window.dataLayer || [];n      function gtag(){dataLayer.push(arguments);}n      gtag('js', new Date());nn      gtag('config', 'G-3FNCYG6XM1');n    </script>n
 </head>
 
 <body>
