--- a/public/aviso-legal.html
+++ b/public/aviso-legal.html
@@ -23,6 +23,7 @@
             margin-bottom: 15px;
         }
     </style>
+    <!-- Google tag (gtag.js) -->n    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FNCYG6XM1"></script>n    <script>n      window.dataLayer = window.dataLayer || [];n      function gtag(){dataLayer.push(arguments);}n      gtag('js', new Date());nn      gtag('config', 'G-3FNCYG6XM1');n    </script>n
 </head>
 
 <body>
