--- a/public/nfts-inversion-especulacion.html
+++ b/public/nfts-inversion-especulacion.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="article.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="adsense.css">
+    <!-- Google tag (gtag.js) -->n    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FNCYG6XM1"></script>n    <script>n      window.dataLayer = window.dataLayer || [];n      function gtag(){dataLayer.push(arguments);}n      gtag('js', new Date());nn      gtag('config', 'G-3FNCYG6XM1');n    </script>n
 </head>
 
 <body>
