✅ Añadir códigos de Google AdSense y Analytics a todos los archivos HTML
- Instalado código de AdSense (ca-pub-4245545296537847) en 33 archivos HTML
- Corregido código de Google Analytics (G-3FNCYG6XM1) con formato correcto
- Eliminados códigos corruptos con caracteres \n literales
- Todos los códigos ubicados correctamente en la sección <head>
- Añadido script fix_all_tracking_codes.py para mantenimiento futuro
- Validación: 0 errores de sintaxis HTML
- Listo para verificación de Google AdSense

--- a/public/economia-articulo1.html
+++ b/public/economia-articulo1.html
@@ -2,7 +2,20 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
+<!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4245545296537847" crossorigin="anonymous"></script>
+
+<!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FNCYG6XM1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-3FNCYG6XM1');
+    </script>
+
+<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tendencias del mercado esta semana | AV Finanzas</title>
 
@@ -12,7 +25,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="article.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
-    <!-- Google tag (gtag.js) -->n    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FNCYG6XM1"></script>n    <script>n      window.dataLayer = window.dataLayer || [];n      function gtag(){dataLayer.push(arguments);}n      gtag('js', new Date());nn      gtag('config', 'G-3FNCYG6XM1');n    </script>n
+        
 </head>
 
 <body>
