--- a/public/fondos-indexados-guia.html
+++ b/public/fondos-indexados-guia.html
@@ -2,7 +2,20 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
+<!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4245545296537847" crossorigin="anonymous"></script>
+
+<!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FNCYG6XM1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-3FNCYG6XM1');
+    </script>
+
+<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
         content="Guía completa sobre cómo invertir en fondos indexados. Aprende qué son, sus ventajas y cómo empezar a invertir de forma inteligente." />
@@ -13,16 +26,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="adsense.css">
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FNCYG6XM1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-3FNCYG6XM1');
-    </script>
-</head>
+    </head>
 
 <body>
     <header class="article-header">
