--- a/public/inflacion-proteger-dinero.html
+++ b/public/inflacion-proteger-dinero.html
@@ -2,7 +2,20 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
+<!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4245545296537847" crossorigin="anonymous"></script>
+
+<!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FNCYG6XM1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-3FNCYG6XM1');
+    </script>
+
+<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
         content="Guía completa sobre cómo proteger tu dinero de la inflación. Estrategias de inversión y activos refugio para preservar tu poder adquisitivo." />
@@ -11,8 +24,7 @@
     <link rel="stylesheet" href="article.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="adsense.css">
-    <!-- Google tag (gtag.js) -->n    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FNCYG6XM1"></script>n    <script>n      window.dataLayer = window.dataLayer || [];n      function gtag(){dataLayer.push(arguments);}n      gtag('js', new Date());nn      gtag('config', 'G-3FNCYG6XM1');n    </script>n
-</head>
+   </head>
 
 <body>
     <header class="article-header">
