Finalizar mejoras artículo Trading vs Inversión: centrar cajas comparativas y eliminar badge VS

--- a/public/economia-articulo1.html
+++ b/public/economia-articulo1.html
@@ -30,7 +30,7 @@
 
 <body>
 
-    <header class="main-header">
+        <header class="main-header">
         <div class="logo">
             <img src="logo.png" alt="AV Finanzas - Portal de información financiera">
         </div>
@@ -38,14 +38,13 @@
         <nav class="main-nav">
             <ul class="left-menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="todos-los-articulos.html">Noticias</a></li>
-                <li><a href="economia.html">Economía</a></li>
-                <li><a href="mercados.html">Mercados</a></li>
-                <li><a href="criptomonedas.html">Criptomonedas</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="#">Noticias</a></li>
+                <li><a href="#">Economía</a></li>
+                <li><a href="#">Inversiones</a></li>
+                <li><a href="#">Criptomonedas</a></li>
             </ul>
 
-            <a href="todos-los-articulos.html" class="cta-button">Leer artículos</a>
+            <a href="index.html" class="cta-button">Volver al inicio</a>
         </nav>
     </header>
 
@@ -380,7 +379,7 @@
 
     </main>
 
-    <footer class="main-footer">
+        <footer class="main-footer">
         <div class="footer-grid">
             <div>
                 <h3>AV Finanzas</h3>
@@ -398,14 +397,14 @@
             <div>
                 <h4>Legal</h4>
                 <ul>
-                    <li><a href="politica-privacidad.html">Política de Privacidad</a></li>
-                    <li><a href="cookies.html">Política de Cookies</a></li>
-                    <li><a href="aviso-legal.html">Aviso Legal</a></li>
+                    <li><a href="#">Política de Privacidad</a></li>
+                    <li><a href="#">Política de Cookies</a></li>
+                    <li><a href="#">Aviso Legal</a></li>
                 </ul>
             </div>
         </div>
 
-        <p class="footer-copy">© 2024 AV Finanzas. Todos los derechos reservados.</p>
+        <p class="footer-copy">© 2025 AV Finanzas. Todos los derechos reservados.</p>
     </footer>
 
     <!-- JavaScript -->
