--- a/public/tecnologicas-mantienen-crecimiento.html
+++ b/public/tecnologicas-mantienen-crecimiento.html
@@ -30,7 +30,7 @@
 
 <body>
 
-    <header class="main-header">
+        <header class="main-header">
         <div class="logo">
             <img src="logo.png" alt="AV Finanzas - Portal de información financiera">
         </div>
@@ -41,8 +41,7 @@
                 <li><a href="#">Noticias</a></li>
                 <li><a href="#">Economía</a></li>
                 <li><a href="#">Inversiones</a></li>
-                <li><a href="#">Empresas</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Criptomonedas</a></li>
             </ul>
 
             <a href="index.html" class="cta-button">Volver al inicio</a>
@@ -482,7 +481,7 @@
 
     </main>
 
-    <footer class="main-footer">
+        <footer class="main-footer">
         <div class="footer-grid">
             <div>
                 <h3>AV Finanzas</h3>
@@ -507,7 +506,7 @@
             </div>
         </div>
 
-        <p class="footer-copy">© 2024 AV Finanzas. Todos los derechos reservados.</p>
+        <p class="footer-copy">© 2025 AV Finanzas. Todos los derechos reservados.</p>
     </footer>
 
     <!-- JavaScript -->
