--- a/public/dolar-sube-presiona-economias-emergentes.html
+++ b/public/dolar-sube-presiona-economias-emergentes.html
@@ -30,24 +30,23 @@
 
 <body>
 
-  <header class="main-header">
-    <div class="logo">
-      <img src="logo.png" alt="AV Finanzas - Portal de información financiera">
-    </div>
+      <header class="main-header">
+        <div class="logo">
+            <img src="logo.png" alt="AV Finanzas - Portal de información financiera">
+        </div>
 
-    <nav class="main-nav">
-      <ul class="left-menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">Noticias</a></li>
-        <li><a href="#">Economía</a></li>
-        <li><a href="#">Inversiones</a></li>
-        <li><a href="#">Mercados</a></li>
-        <li><a href="#">Contacto</a></li>
-      </ul>
+        <nav class="main-nav">
+            <ul class="left-menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Noticias</a></li>
+                <li><a href="#">Economía</a></li>
+                <li><a href="#">Inversiones</a></li>
+                <li><a href="#">Criptomonedas</a></li>
+            </ul>
 
-      <a href="index.html" class="cta-button">Volver al inicio</a>
-    </nav>
-  </header>
+            <a href="index.html" class="cta-button">Volver al inicio</a>
+        </nav>
+    </header>
 
   <!-- Barra de progreso de lectura -->
   <div class="reading-progress" id="readingProgress"></div>
@@ -480,33 +479,33 @@
 
   </main>
 
-  <footer class="main-footer">
-    <div class="footer-grid">
-      <div>
-        <h3>AV Finanzas</h3>
-        <p>Tu portal de información financiera.</p>
-      </div>
-      <div>
-        <h4>Categorías</h4>
-        <ul>
-          <li><a href="economia.html">Economía</a></li>
-          <li><a href="mercados.html">Mercados</a></li>
-          <li><a href="criptomonedas.html">Criptomonedas</a></li>
-          <li><a href="empresas.html">Empresas</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4>Legal</h4>
-        <ul>
-          <li><a href="#">Política de Privacidad</a></li>
-          <li><a href="#">Política de Cookies</a></li>
-          <li><a href="#">Aviso Legal</a></li>
-        </ul>
-      </div>
-    </div>
+      <footer class="main-footer">
+        <div class="footer-grid">
+            <div>
+                <h3>AV Finanzas</h3>
+                <p>Tu portal de información financiera.</p>
+            </div>
+            <div>
+                <h4>Categorías</h4>
+                <ul>
+                    <li><a href="economia.html">Economía</a></li>
+                    <li><a href="mercados.html">Mercados</a></li>
+                    <li><a href="criptomonedas.html">Criptomonedas</a></li>
+                    <li><a href="empresas.html">Empresas</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4>Legal</h4>
+                <ul>
+                    <li><a href="#">Política de Privacidad</a></li>
+                    <li><a href="#">Política de Cookies</a></li>
+                    <li><a href="#">Aviso Legal</a></li>
+                </ul>
+            </div>
+        </div>
 
-    <p class="footer-copy">© 2025 AV Finanzas. Todos los derechos reservados.</p>
-  </footer>
+        <p class="footer-copy">© 2025 AV Finanzas. Todos los derechos reservados.</p>
+    </footer>
 
   <!-- JavaScript -->
   <script src="article-interactive.js"></script>
